--- a/sitemap.html
+++ b/sitemap.html
@@ -18,68 +18,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-footer *{
-font-size:16px !important;
+.y76d24019791e2bdb8f6cf31ce74a9190 p,.y76d24019791e2bdb8f6cf31ce74a9190 a,.y76d24019791e2bdb8f6cf31ce74a9190 span,.y76d24019791e2bdb8f6cf31ce74a9190 label{
+font-size:16px!important;
 }
-.nav-link{
-color: #000000!important;
-
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-footer{
-background:#010101;
-color:#ffffff;
+ul{
+list-style: circle;
 }
 .btn-md{
-padding: 15.3px 30.2px;
+padding: 15.5px 30px;
 border-radius: 0;
+}
+html{
+scroll-behavior: smooth;
+}
+.nav-item{
+padding-left:7.5px;
+padding-right:8.4px;
+padding-top:5.1px;
+padding-bottom:5.3px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.y87412d297e2266ef1ad01c2714d7f5f3 p,.y87412d297e2266ef1ad01c2714d7f5f3 a,.y87412d297e2266ef1ad01c2714d7f5f3 span,.y87412d297e2266ef1ad01c2714d7f5f3 label{
-font-size:16px!important;
+.nav-link{
+color: #000000!important;
+
 }
-.va1f9471071f0c189b013015b49beaa3c a{
-font-size:16px;
-}
-.za28a45908a90b0c9e786b00ae43b5048{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.nav-item{
-padding-left:8.4px;
-padding-right:8.4px;
-padding-top:4.6px;
-padding-bottom:4.9px;
-}
-.fb89edd5a3adf1faa5d7401a6e6be79a0:hover{
-box-shadow: 0 50.1px 50.3px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.y87412d297e2266ef1ad01c2714d7f5f3 a,.va1f9471071f0c189b013015b49beaa3c a{
-color:#0e0e0e!important;
-text-decoration: underline !important;
-}
-.navbar a{
-font-size: 18px!important;
-font-weight: bold;
+footer{
+background:#0a0a0a;
+color:#ffffff;
 }
 a{
 text-decoration: none!important;
 }
-.va1f9471071f0c189b013015b49beaa3c p,.va1f9471071f0c189b013015b49beaa3c span,.va1f9471071f0c189b013015b49beaa3c label{
+.x10676741baec69ce9bfbb1fbc5e3c43c{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+footer *{
+font-size:16px !important;
+}
+.y76d24019791e2bdb8f6cf31ce74a9190 a,.a2c8095c62f623836cce29a985b964471 a{
+color:#010101!important;
+text-decoration: underline !important;
+}
+.navbar a{
+font-size: 17.7px!important;
+font-weight: bold;
+}
+.a2c8095c62f623836cce29a985b964471 p,.a2c8095c62f623836cce29a985b964471 span,.a2c8095c62f623836cce29a985b964471 label{
 font-size:16px!important;
 }
-html{
-scroll-behavior: smooth;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
-ul{
-list-style: circle;
+.x072ac2168dc7b0e60e5f138e917322d5:hover{
+box-shadow: 0 50.3px 50.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.a2c8095c62f623836cce29a985b964471 a{
+font-size:16px;
 }
 </style>
 </head>
@@ -88,24 +88,24 @@ list-style: circle;
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
-<a class="a6a938c3deff27e0bc1871f223f5b1212 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="d-flex ml-auto align-items-center navbar-nav"><li class="nav-item">
+<a class="xedca6bffa3237189c8066acaf66f6223 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="a6a938c3deff27e0bc1871f223f5b1212 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link xedca6bffa3237189c8066acaf66f6223" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link a6a938c3deff27e0bc1871f223f5b1212" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="xedca6bffa3237189c8066acaf66f6223 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link a6a938c3deff27e0bc1871f223f5b1212" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link xedca6bffa3237189c8066acaf66f6223" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="dropdown-toggle a6a938c3deff27e0bc1871f223f5b1212 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<a class="nav-link xedca6bffa3237189c8066acaf66f6223 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="a6a938c3deff27e0bc1871f223f5b1212 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="xedca6bffa3237189c8066acaf66f6223 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -126,30 +126,30 @@ list-style: circle;
 <li>7) <a href="https://olb45.netlify.app/local-plumbing-service.html " >https://olb45.netlify.app/local-plumbing-service.html</a></li>
 <li>8) <a href="https://olb45.netlify.app/plumber-north-london.html " >https://olb45.netlify.app/plumber-north-london.html</a></li>
 <li>9) <a href="https://olb45.netlify.app/privacy-policy.html " >https://olb45.netlify.app/privacy-policy.html</a></li>
-<li>10) <a href="https://olb45.netlify.app/feed.xml " >https://olb45.netlify.app/feed.xml</a></li>
+<li>10) <a href="https://olb45.netlify.app/sitemap.html " >https://olb45.netlify.app/sitemap.html</a></li>
 <li>11) <a href="https://olb45.netlify.app/sitemap.xml " >https://olb45.netlify.app/sitemap.xml</a></li>
-<li>12) <a href="https://olb45.netlify.app/sitemap.html " >https://olb45.netlify.app/sitemap.html</a></li>
-<li>13) <a href="https://olb45.netlify.app/about-us.html " >https://olb45.netlify.app/about-us.html</a></li>
+<li>12) <a href="https://olb45.netlify.app/about-us.html " >https://olb45.netlify.app/about-us.html</a></li>
+<li>13) <a href="https://olb45.netlify.app/feed.xml " >https://olb45.netlify.app/feed.xml</a></li>
 </ul>
 </div>
 </section>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="py-4 pt-5 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="a6a938c3deff27e0bc1871f223f5b1212" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="a6a938c3deff27e0bc1871f223f5b1212" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="a6a938c3deff27e0bc1871f223f5b1212" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="a6a938c3deff27e0bc1871f223f5b1212" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="xedca6bffa3237189c8066acaf66f6223" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="xedca6bffa3237189c8066acaf66f6223" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="xedca6bffa3237189c8066acaf66f6223" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="xedca6bffa3237189c8066acaf66f6223" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook c9b1e5765c3a8936ea051ca4c9d8cc7bd" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="c9b1e5765c3a8936ea051ca4c9d8cc7bd pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="c9b1e5765c3a8936ea051ca4c9d8cc7bd google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="c9b1e5765c3a8936ea051ca4c9d8cc7bd twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="af4e4c2a5c44895bc388d1ec66c43e11f facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest af4e4c2a5c44895bc388d1ec66c43e11f" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google af4e4c2a5c44895bc388d1ec66c43e11f-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter af4e4c2a5c44895bc388d1ec66c43e11f" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
