--- a/about-us.html
+++ b/about-us.html
@@ -22,97 +22,97 @@ footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-html{
-scroll-behavior: smooth;
+.b82c3f2626f111ce8506c97ea40999b25 a{
+font-size:16px;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.x20e8887eef3b67476ae9f32fd365f4f6 a,.b82c3f2626f111ce8506c97ea40999b25 a{
+color:#111111!important;
+text-decoration: underline !important;
 }
-.cd0e6b2fa5f95a0018bff5aa6502253d5{
+.e44a738c39ababf9444e28590ba3b7b56{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-.ef4e7ba5ee1d597499c50e1b529b7294f p,.ef4e7ba5ee1d597499c50e1b529b7294f a,.ef4e7ba5ee1d597499c50e1b529b7294f span,.ef4e7ba5ee1d597499c50e1b529b7294f label{
-font-size:16px!important;
-}
-.nav-item{
-padding-left:8px;
-padding-right:8.2px;
-padding-top:5.5px;
-padding-bottom:5px;
-}
-ul{
-list-style: circle;
-}
-.ybe035ac45462b72077377d2b82e5743d p,.ybe035ac45462b72077377d2b82e5743d span,.ybe035ac45462b72077377d2b82e5743d label{
-font-size:16px!important;
-}
-.navbar a{
-font-size: 18px!important;
-font-weight: bold;
-}
-footer{
-background:#0f0f0f;
-color:#ffffff;
-}
 .btn-md{
-padding: 15.2px 29.6px;
+padding: 15.2px 29.7px;
 border-radius: 0;
 }
-.uddd452f6c058e85792916e489c8d2c11{
-border: 1px solid #6b889639;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f3f1ed;
+.b82c3f2626f111ce8506c97ea40999b25 p,.b82c3f2626f111ce8506c97ea40999b25 span,.b82c3f2626f111ce8506c97ea40999b25 label{
+font-size:16px!important;
+}
+html{
+scroll-behavior: smooth;
 }
 a{
 text-decoration: none!important;
 }
-.ef4e7ba5ee1d597499c50e1b529b7294f a,.ybe035ac45462b72077377d2b82e5743d a{
-color:#000000!important;
-text-decoration: underline !important;
-}
-.ybe035ac45462b72077377d2b82e5743d a{
-font-size:16px;
-}
-footer *{
-font-size:16px !important;
-}
-.d9e675c40b225df08208ca0fee1dcab5b:hover{
-box-shadow: 0 49.7px 50px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.x20e8887eef3b67476ae9f32fd365f4f6 p,.x20e8887eef3b67476ae9f32fd365f4f6 a,.x20e8887eef3b67476ae9f32fd365f4f6 span,.x20e8887eef3b67476ae9f32fd365f4f6 label{
+font-size:16px!important;
 }
 .nav-link{
 color: #000000!important;
 
 }
+.b4922c84ab2002eff8299aee6dbfe4abd:hover{
+box-shadow: 0 49.9px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.navbar a{
+font-size: 18.5px!important;
+font-weight: bold;
+}
+footer{
+background:#0d0d0d;
+color:#ffffff;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.nav-item{
+padding-left:8px;
+padding-right:8.1px;
+padding-top:4.9px;
+padding-bottom:4.8px;
+}
+.db7bc5148c1860e2b97c58d3a6364a492{
+border: 1px solid #69869437;
+border-radius: 5px;
+padding: 20px 20px;
+background: #fdfbf7;
+}
+ul{
+list-style: circle;
+}
+footer *{
+font-size:16px !important;
+}
 </style>
 </head>
 <body>
      
-<nav class="navbar navbar-expand-lg">
-<a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
+<nav class="navbar-expand-lg navbar">
+<a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex align-items-center ml-auto navbar-nav"><li class="nav-item">
-<a class="nav-link fa575450842de5c0b6d5cf614f81c1fe2" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="ml-auto d-flex navbar-nav align-items-center"><li class="nav-item">
+<a class="e93db604b63997d80cc1a316eed47b38c nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="fa575450842de5c0b6d5cf614f81c1fe2 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="e93db604b63997d80cc1a316eed47b38c nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link fa575450842de5c0b6d5cf614f81c1fe2" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="e93db604b63997d80cc1a316eed47b38c nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="fa575450842de5c0b6d5cf614f81c1fe2 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link e93db604b63997d80cc1a316eed47b38c" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="fa575450842de5c0b6d5cf614f81c1fe2 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle e93db604b63997d80cc1a316eed47b38c" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="fa575450842de5c0b6d5cf614f81c1fe2 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="e93db604b63997d80cc1a316eed47b38c nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ color: #000000!important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 uddd452f6c058e85792916e489c8d2c11">
+<div class="col-md-12 mb-3 db7bc5148c1860e2b97c58d3a6364a492">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="fa575450842de5c0b6d5cf614f81c1fe2" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="fa575450842de5c0b6d5cf614f81c1fe2" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="fa575450842de5c0b6d5cf614f81c1fe2" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="fa575450842de5c0b6d5cf614f81c1fe2" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
-<p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
+<p>Company Website : <a class="e93db604b63997d80cc1a316eed47b38c" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="e93db604b63997d80cc1a316eed47b38c" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="e93db604b63997d80cc1a316eed47b38c" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="e93db604b63997d80cc1a316eed47b38c" href="about-us.html" rel="nofollow">About Us</a></p>
+<p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook eff8d5e8845e1ebdb73082cc5823ab01e" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="eff8d5e8845e1ebdb73082cc5823ab01e pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google eff8d5e8845e1ebdb73082cc5823ab01e-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter eff8d5e8845e1ebdb73082cc5823ab01e" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook v434a14b722c27f4da1a734c5c1468cd1" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest v434a14b722c27f4da1a734c5c1468cd1" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="v434a14b722c27f4da1a734c5c1468cd1 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="v434a14b722c27f4da1a734c5c1468cd1 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
