--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,7 +10,7 @@
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-<link rel="canonical" href="https://olb45.netlify.app/privacy-policy.html">
+<link rel="canonical" href="privacy-policy.html">
 <link rel="shortcut icon"  href="img/logo.jpg"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kumbh+Sans:100,200,300,400,500,600,700,800,900&amp;display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -19,29 +19,38 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.navbar a{
-font-size: 17.5px!important;
-font-weight: bold;
-}
 .btn-md{
-padding: 15.4px 30px;
+padding: 15.3px 30px;
 border-radius: 0;
 }
-.uca487345b5e77d5017847e7fc428caa9 a{
-font-size:16px;
-}
-.b3e61184551b5998eae82f655ff01d783 p,.b3e61184551b5998eae82f655ff01d783 a,.b3e61184551b5998eae82f655ff01d783 span,.b3e61184551b5998eae82f655ff01d783 label{
-font-size:16px!important;
+ul{
+list-style: circle;
 }
 a{
 text-decoration: none!important;
+}
+footer *{
+font-size:16px !important;
+}
+html{
+scroll-behavior: smooth;
+}
+.v58bc0083d077d184793147699d5e1ae2{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 .nav-link{
 color: #000000!important;
 
 }
-.uca487345b5e77d5017847e7fc428caa9 p,.uca487345b5e77d5017847e7fc428caa9 span,.uca487345b5e77d5017847e7fc428caa9 label{
-font-size:16px!important;
+.cf17d7c8a0bbe8bc188b633ca81e38703 a,.yc6a789877f6fd06cea39e9c8b2f34d01 a{
+color:#080808!important;
+text-decoration: underline !important;
+}
+footer{
+background:#020202;
+color:#ffffff;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
@@ -50,63 +59,54 @@ footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.nav-item{
-padding-left:8.1px;
-padding-right:8px;
-padding-top:5.1px;
-padding-bottom:4.6px;
-}
-.ud059097e5a45344b0788fbcbe627e0a4:hover{
-box-shadow: 0 49.7px 50.2px -25px rgb(0 0 0 / 30%);
+.a21874252a5528723904342391a92e8b8:hover{
+box-shadow: 0 50px 50px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
 }
-ul{
-list-style: circle;
+.cf17d7c8a0bbe8bc188b633ca81e38703 p,.cf17d7c8a0bbe8bc188b633ca81e38703 a,.cf17d7c8a0bbe8bc188b633ca81e38703 span,.cf17d7c8a0bbe8bc188b633ca81e38703 label{
+font-size:16px!important;
 }
-footer{
-background:#020202;
-color:#ffffff;
+.nav-item{
+padding-left:8.4px;
+padding-right:7.7px;
+padding-top:4.7px;
+padding-bottom:5.1px;
 }
-.b3e61184551b5998eae82f655ff01d783 a,.uca487345b5e77d5017847e7fc428caa9 a{
-color:#080808!important;
-text-decoration: underline !important;
+.yc6a789877f6fd06cea39e9c8b2f34d01 p,.yc6a789877f6fd06cea39e9c8b2f34d01 span,.yc6a789877f6fd06cea39e9c8b2f34d01 label{
+font-size:16px!important;
 }
-.xf8548ae428fe9e36b2764e937d9ead28{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+.navbar a{
+font-size: 18.5px!important;
+font-weight: bold;
 }
-html{
-scroll-behavior: smooth;
-}
-footer *{
-font-size:16px !important;
+.yc6a789877f6fd06cea39e9c8b2f34d01 a{
+font-size:16px;
 }
 </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg">
-<a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
+<a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="align-items-center ml-auto navbar-nav d-flex"><li class="nav-item">
-<a class="nav-link vcb606779bc7536cf98d06035b692c888" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="align-items-center navbar-nav ml-auto d-flex"><li class="nav-item">
+<a class="wfead0434f119d60796d75626d28feb28 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="vcb606779bc7536cf98d06035b692c888 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link wfead0434f119d60796d75626d28feb28" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link vcb606779bc7536cf98d06035b692c888" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="wfead0434f119d60796d75626d28feb28 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link vcb606779bc7536cf98d06035b692c888" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link wfead0434f119d60796d75626d28feb28" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="vcb606779bc7536cf98d06035b692c888 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
+<a class="nav-link wfead0434f119d60796d75626d28feb28 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link vcb606779bc7536cf98d06035b692c888" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="wfead0434f119d60796d75626d28feb28 nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="vcb606779bc7536cf98d06035b692c888" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="vcb606779bc7536cf98d06035b692c888" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="vcb606779bc7536cf98d06035b692c888" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="vcb606779bc7536cf98d06035b692c888" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
-<p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
+<p>Company Website : <a class="wfead0434f119d60796d75626d28feb28" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="wfead0434f119d60796d75626d28feb28" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="wfead0434f119d60796d75626d28feb28" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="wfead0434f119d60796d75626d28feb28" href="about-us.html" rel="nofollow">About Us</a></p>
+<p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook x3ad93b82142f7e3eeda75490b22e8ce8" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="x3ad93b82142f7e3eeda75490b22e8ce8 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="x3ad93b82142f7e3eeda75490b22e8ce8 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter x3ad93b82142f7e3eeda75490b22e8ce8" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook y8a8b6fd52bb0e21d76939279e2342754" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest y8a8b6fd52bb0e21d76939279e2342754" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="y8a8b6fd52bb0e21d76939279e2342754 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="y8a8b6fd52bb0e21d76939279e2342754 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
