--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,94 +19,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.btn-md{
-padding: 15.3px 30px;
-border-radius: 0;
-}
-ul{
-list-style: circle;
-}
-a{
-text-decoration: none!important;
-}
-footer *{
-font-size:16px !important;
-}
 html{
 scroll-behavior: smooth;
-}
-.v58bc0083d077d184793147699d5e1ae2{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.cf17d7c8a0bbe8bc188b633ca81e38703 a,.yc6a789877f6fd06cea39e9c8b2f34d01 a{
-color:#080808!important;
-text-decoration: underline !important;
-}
-footer{
-background:#020202;
-color:#ffffff;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.a21874252a5528723904342391a92e8b8:hover{
-box-shadow: 0 50px 50px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.cf17d7c8a0bbe8bc188b633ca81e38703 p,.cf17d7c8a0bbe8bc188b633ca81e38703 a,.cf17d7c8a0bbe8bc188b633ca81e38703 span,.cf17d7c8a0bbe8bc188b633ca81e38703 label{
-font-size:16px!important;
-}
-.nav-item{
-padding-left:8.4px;
-padding-right:7.7px;
-padding-top:4.7px;
-padding-bottom:5.1px;
-}
-.yc6a789877f6fd06cea39e9c8b2f34d01 p,.yc6a789877f6fd06cea39e9c8b2f34d01 span,.yc6a789877f6fd06cea39e9c8b2f34d01 label{
-font-size:16px!important;
 }
 .navbar a{
 font-size: 18.5px!important;
 font-weight: bold;
 }
-.yc6a789877f6fd06cea39e9c8b2f34d01 a{
+.y73620e5a02d66c85bb5939b4249dc64c p,.y73620e5a02d66c85bb5939b4249dc64c span,.y73620e5a02d66c85bb5939b4249dc64c label{
+font-size:16px!important;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.vc1fa8660293eb6de0899220ded1f593d p,.vc1fa8660293eb6de0899220ded1f593d a,.vc1fa8660293eb6de0899220ded1f593d span,.vc1fa8660293eb6de0899220ded1f593d label{
+font-size:16px!important;
+}
+.nav-link{
+color: #000000!important;
+
+}
+footer *{
+font-size:16px !important;
+}
+.vc1fa8660293eb6de0899220ded1f593d a,.y73620e5a02d66c85bb5939b4249dc64c a{
+color:#0c0c0c!important;
+text-decoration: underline !important;
+}
+.btn-md{
+padding: 15.1px 29.6px;
+border-radius: 0;
+}
+.nav-item{
+padding-left:8.4px;
+padding-right:7.7px;
+padding-top:4.6px;
+padding-bottom:5.3px;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+.y96984dc16632314d90d54079530b5084{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+footer{
+background:#030303;
+color:#ffffff;
+}
+ul{
+list-style: circle;
+}
+.t2b359684c17cccc09be7ace95e428928:hover{
+box-shadow: 0 49.5px 49.6px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+a{
+text-decoration: none!important;
+}
+.y73620e5a02d66c85bb5939b4249dc64c a{
 font-size:16px;
 }
 </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="align-items-center navbar-nav ml-auto d-flex"><li class="nav-item">
-<a class="wfead0434f119d60796d75626d28feb28 nav-link" href="index.html" >plumbing quotes</a>
+<ul class="ml-auto align-items-center d-flex navbar-nav"><li class="nav-item">
+<a class="nav-link w85f4049a02e6381f88f84b768141e521" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link wfead0434f119d60796d75626d28feb28" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="w85f4049a02e6381f88f84b768141e521 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="wfead0434f119d60796d75626d28feb28 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link w85f4049a02e6381f88f84b768141e521" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link wfead0434f119d60796d75626d28feb28" href="quote-my-job.html" >quote my job</a>
+<a class="w85f4049a02e6381f88f84b768141e521 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link wfead0434f119d60796d75626d28feb28 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<li class="dropdown nav-item">
+<a class="nav-link dropdown-toggle w85f4049a02e6381f88f84b768141e521" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="wfead0434f119d60796d75626d28feb28 nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link w85f4049a02e6381f88f84b768141e521" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -176,19 +176,19 @@ https://www.mmlplumbing.co.uk/</br>
 <div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="wfead0434f119d60796d75626d28feb28" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="wfead0434f119d60796d75626d28feb28" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="wfead0434f119d60796d75626d28feb28" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="wfead0434f119d60796d75626d28feb28" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="w85f4049a02e6381f88f84b768141e521" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="w85f4049a02e6381f88f84b768141e521" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="w85f4049a02e6381f88f84b768141e521" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="w85f4049a02e6381f88f84b768141e521" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook y8a8b6fd52bb0e21d76939279e2342754" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest y8a8b6fd52bb0e21d76939279e2342754" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="y8a8b6fd52bb0e21d76939279e2342754 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="y8a8b6fd52bb0e21d76939279e2342754 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook bec4f020e2e161b6a9012f802195b913d" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest bec4f020e2e161b6a9012f802195b913d" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="bec4f020e2e161b6a9012f802195b913d google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter bec4f020e2e161b6a9012f802195b913d" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
