--- a/about-us.html
+++ b/about-us.html
@@ -18,74 +18,74 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.b82c3f2626f111ce8506c97ea40999b25 a{
+.vd864f251e386477853874bf96d8f3fae a{
 font-size:16px;
 }
-.x20e8887eef3b67476ae9f32fd365f4f6 a,.b82c3f2626f111ce8506c97ea40999b25 a{
-color:#111111!important;
+.u7bd87946c0c3fe0b4f27529a2c852f33 a,.vd864f251e386477853874bf96d8f3fae a{
+color:#050505!important;
 text-decoration: underline !important;
 }
-.e44a738c39ababf9444e28590ba3b7b56{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.btn-md{
-padding: 15.2px 29.7px;
-border-radius: 0;
-}
-.b82c3f2626f111ce8506c97ea40999b25 p,.b82c3f2626f111ce8506c97ea40999b25 span,.b82c3f2626f111ce8506c97ea40999b25 label{
-font-size:16px!important;
+footer *{
+font-size:16px !important;
 }
 html{
 scroll-behavior: smooth;
 }
+.b500b3ba97ff76a750a81a3768f96d2eb:hover{
+box-shadow: 0 50.3px 49.9px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
 a{
 text-decoration: none!important;
 }
-.x20e8887eef3b67476ae9f32fd365f4f6 p,.x20e8887eef3b67476ae9f32fd365f4f6 a,.x20e8887eef3b67476ae9f32fd365f4f6 span,.x20e8887eef3b67476ae9f32fd365f4f6 label{
-font-size:16px!important;
+.navbar a{
+font-size: 17.5px!important;
+font-weight: bold;
+}
+footer{
+background:#101010;
+color:#ffffff;
+}
+.nav-item{
+padding-left:8.2px;
+padding-right:7.5px;
+padding-top:4.9px;
+padding-bottom:5.3px;
+}
+.xb7ed571ce291ad7fdfeb2294b45a9fab{
+border: 1px solid #65829033;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f3f1ed;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
 .nav-link{
 color: #000000!important;
 
 }
-.b4922c84ab2002eff8299aee6dbfe4abd:hover{
-box-shadow: 0 49.9px 50.4px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.navbar a{
-font-size: 18.5px!important;
-font-weight: bold;
-}
-footer{
-background:#0d0d0d;
-color:#ffffff;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.nav-item{
-padding-left:8px;
-padding-right:8.1px;
-padding-top:4.9px;
-padding-bottom:4.8px;
-}
-.db7bc5148c1860e2b97c58d3a6364a492{
-border: 1px solid #69869437;
-border-radius: 5px;
-padding: 20px 20px;
-background: #fdfbf7;
-}
 ul{
 list-style: circle;
 }
-footer *{
-font-size:16px !important;
+.u7bd87946c0c3fe0b4f27529a2c852f33 p,.u7bd87946c0c3fe0b4f27529a2c852f33 a,.u7bd87946c0c3fe0b4f27529a2c852f33 span,.u7bd87946c0c3fe0b4f27529a2c852f33 label{
+font-size:16px!important;
+}
+.btn-md{
+padding: 15.5px 30px;
+border-radius: 0;
+}
+.e9bb3c91be1e445b92b96a65e527913b1{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.vd864f251e386477853874bf96d8f3fae p,.vd864f251e386477853874bf96d8f3fae span,.vd864f251e386477853874bf96d8f3fae label{
+font-size:16px!important;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
 }
 </style>
 </head>
@@ -94,25 +94,25 @@ font-size:16px !important;
 <nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="ml-auto d-flex navbar-nav align-items-center"><li class="nav-item">
-<a class="e93db604b63997d80cc1a316eed47b38c nav-link" href="index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="ml-auto d-flex align-items-center navbar-nav"><li class="nav-item">
+<a class="baa906c01c732f378c49fb5accd5b5174 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="e93db604b63997d80cc1a316eed47b38c nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link baa906c01c732f378c49fb5accd5b5174" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="e93db604b63997d80cc1a316eed47b38c nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link baa906c01c732f378c49fb5accd5b5174" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link e93db604b63997d80cc1a316eed47b38c" href="quote-my-job.html" >quote my job</a>
+<a class="baa906c01c732f378c49fb5accd5b5174 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle e93db604b63997d80cc1a316eed47b38c" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="nav-link baa906c01c732f378c49fb5accd5b5174 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="e93db604b63997d80cc1a316eed47b38c nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link baa906c01c732f378c49fb5accd5b5174" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ font-size:16px !important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 db7bc5148c1860e2b97c58d3a6364a492">
+<div class="col-md-12 mb-3 xb7ed571ce291ad7fdfeb2294b45a9fab">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="e93db604b63997d80cc1a316eed47b38c" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="e93db604b63997d80cc1a316eed47b38c" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="e93db604b63997d80cc1a316eed47b38c" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="e93db604b63997d80cc1a316eed47b38c" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="baa906c01c732f378c49fb5accd5b5174" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="baa906c01c732f378c49fb5accd5b5174" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="baa906c01c732f378c49fb5accd5b5174" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="baa906c01c732f378c49fb5accd5b5174" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook v434a14b722c27f4da1a734c5c1468cd1" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest v434a14b722c27f4da1a734c5c1468cd1" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="v434a14b722c27f4da1a734c5c1468cd1 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="v434a14b722c27f4da1a734c5c1468cd1 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook a946457db7b43dfd3ffaac1bea8f447cb" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="a946457db7b43dfd3ffaac1bea8f447cb pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="a946457db7b43dfd3ffaac1bea8f447cb google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="a946457db7b43dfd3ffaac1bea8f447cb twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
