--- a/about-us.html
+++ b/about-us.html
@@ -18,74 +18,74 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.vd864f251e386477853874bf96d8f3fae a{
-font-size:16px;
-}
-.u7bd87946c0c3fe0b4f27529a2c852f33 a,.vd864f251e386477853874bf96d8f3fae a{
-color:#050505!important;
-text-decoration: underline !important;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
 footer *{
 font-size:16px !important;
-}
-html{
-scroll-behavior: smooth;
-}
-.b500b3ba97ff76a750a81a3768f96d2eb:hover{
-box-shadow: 0 50.3px 49.9px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-a{
-text-decoration: none!important;
-}
-.navbar a{
-font-size: 17.5px!important;
-font-weight: bold;
-}
-footer{
-background:#101010;
-color:#ffffff;
-}
-.nav-item{
-padding-left:8.2px;
-padding-right:7.5px;
-padding-top:4.9px;
-padding-bottom:5.3px;
-}
-.xb7ed571ce291ad7fdfeb2294b45a9fab{
-border: 1px solid #65829033;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f3f1ed;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
 }
 .nav-link{
 color: #000000!important;
 
 }
-ul{
-list-style: circle;
+html{
+scroll-behavior: smooth;
 }
-.u7bd87946c0c3fe0b4f27529a2c852f33 p,.u7bd87946c0c3fe0b4f27529a2c852f33 a,.u7bd87946c0c3fe0b4f27529a2c852f33 span,.u7bd87946c0c3fe0b4f27529a2c852f33 label{
+.vaa8bfeeb3165f0919893b152cd0971f1:hover{
+box-shadow: 0 50.3px 50.2px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+a{
+text-decoration: none!important;
+}
+.x35ae2b8d1af0796f44dc5987f5452dc9{
+border: 1px solid #708d9b3e;
+border-radius: 5px;
+padding: 20px 20px;
+background: #edebe7;
+}
+.e8322eb5fd99dd30b12b57cc98cdefff3 p,.e8322eb5fd99dd30b12b57cc98cdefff3 span,.e8322eb5fd99dd30b12b57cc98cdefff3 label{
 font-size:16px!important;
 }
-.btn-md{
-padding: 15.5px 30px;
-border-radius: 0;
+.e8322eb5fd99dd30b12b57cc98cdefff3 a{
+font-size:16px;
 }
-.e9bb3c91be1e445b92b96a65e527913b1{
+.de370d28e8bba58786b784c640f3932e9{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-.vd864f251e386477853874bf96d8f3fae p,.vd864f251e386477853874bf96d8f3fae span,.vd864f251e386477853874bf96d8f3fae label{
+.nav-item{
+padding-left:7.8px;
+padding-right:7.5px;
+padding-top:4.5px;
+padding-bottom:4.5px;
+}
+.d139f23710642113787439c1bdd29b4f9 p,.d139f23710642113787439c1bdd29b4f9 a,.d139f23710642113787439c1bdd29b4f9 span,.d139f23710642113787439c1bdd29b4f9 label{
 font-size:16px!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
+}
+ul{
+list-style: circle;
+}
+.navbar a{
+font-size: 17.7px!important;
+font-weight: bold;
+}
+.d139f23710642113787439c1bdd29b4f9 a,.e8322eb5fd99dd30b12b57cc98cdefff3 a{
+color:#111111!important;
+text-decoration: underline !important;
+}
+footer{
+background:#040404;
+color:#ffffff;
+}
+.btn-md{
+padding: 14.5px 29.8px;
+border-radius: 0;
 }
 </style>
 </head>
@@ -94,25 +94,25 @@ text-decoration: underline;
 <nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="ml-auto d-flex align-items-center navbar-nav"><li class="nav-item">
-<a class="baa906c01c732f378c49fb5accd5b5174 nav-link" href="index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="ml-auto align-items-center d-flex navbar-nav"><li class="nav-item">
+<a class="da6caaa5128fe3839f5fdc98a5463d87e nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link baa906c01c732f378c49fb5accd5b5174" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link da6caaa5128fe3839f5fdc98a5463d87e" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link baa906c01c732f378c49fb5accd5b5174" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link da6caaa5128fe3839f5fdc98a5463d87e" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="baa906c01c732f378c49fb5accd5b5174 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="da6caaa5128fe3839f5fdc98a5463d87e nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link baa906c01c732f378c49fb5accd5b5174 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="dropdown-toggle nav-link da6caaa5128fe3839f5fdc98a5463d87e" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link baa906c01c732f378c49fb5accd5b5174" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="da6caaa5128fe3839f5fdc98a5463d87e nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ text-decoration: underline;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 xb7ed571ce291ad7fdfeb2294b45a9fab">
+<div class="col-md-12 mb-3 x35ae2b8d1af0796f44dc5987f5452dc9">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="pt-5 container py-4" >
+<div class="container py-4 pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="baa906c01c732f378c49fb5accd5b5174" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="baa906c01c732f378c49fb5accd5b5174" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="baa906c01c732f378c49fb5accd5b5174" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="baa906c01c732f378c49fb5accd5b5174" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="da6caaa5128fe3839f5fdc98a5463d87e" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="da6caaa5128fe3839f5fdc98a5463d87e" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="da6caaa5128fe3839f5fdc98a5463d87e" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="da6caaa5128fe3839f5fdc98a5463d87e" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook a946457db7b43dfd3ffaac1bea8f447cb" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="a946457db7b43dfd3ffaac1bea8f447cb pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="a946457db7b43dfd3ffaac1bea8f447cb google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="a946457db7b43dfd3ffaac1bea8f447cb twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="z6223141fc251817bd7af0f91b1404944 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest z6223141fc251817bd7af0f91b1404944" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="z6223141fc251817bd7af0f91b1404944 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="z6223141fc251817bd7af0f91b1404944 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
