--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-ul{
-list-style: circle;
-}
-.navbar a{
-font-size: 17.8px!important;
-font-weight: bold;
-}
-.xeff309598315eb1855cead1096a05352 p,.xeff309598315eb1855cead1096a05352 a,.xeff309598315eb1855cead1096a05352 span,.xeff309598315eb1855cead1096a05352 label{
-font-size:16px!important;
-}
-.w3c52c196f73ed03c8915d55822f41074 p,.w3c52c196f73ed03c8915d55822f41074 span,.w3c52c196f73ed03c8915d55822f41074 label{
-font-size:16px!important;
-}
-footer *{
-font-size:16px !important;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
 footer{
-background:#0c0c0c;
+background:#0e0e0e;
 color:#ffffff;
+}
+.d5d42670473761abbb70e2740532335cd:hover{
+box-shadow: 0 50px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 .nav-link{
 color: #000000!important;
 
 }
-a{
-text-decoration: none!important;
+.btn-md{
+padding: 14.7px 29.9px;
+border-radius: 0;
 }
-.nav-item{
-padding-left:7.6px;
-padding-right:8.2px;
-padding-top:5.2px;
-padding-bottom:5.1px;
-}
-.y07812a9ed57c932f2ea72e0166e4cba1:hover{
-box-shadow: 0 50.1px 49.7px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.w3c52c196f73ed03c8915d55822f41074 a{
-font-size:16px;
-}
-.xeff309598315eb1855cead1096a05352 a,.w3c52c196f73ed03c8915d55822f41074 a{
-color:#101010!important;
-text-decoration: underline !important;
-}
-.y24cffa39fcb7997f7a23161471ba3708{
+.a00d662bc0f64c5e802e181047a5b7faa{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.navbar a{
+font-size: 17.5px!important;
+font-weight: bold;
+}
+ul{
+list-style: circle;
+}
+footer *{
+font-size:16px !important;
+}
+.w2b1d0407fc6ea3305f592db7b9858c29 p,.w2b1d0407fc6ea3305f592db7b9858c29 span,.w2b1d0407fc6ea3305f592db7b9858c29 label{
+font-size:16px!important;
+}
+.xa5333b27c7c365daa25adacac6401473 a,.w2b1d0407fc6ea3305f592db7b9858c29 a{
+color:#090909!important;
+text-decoration: underline !important;
+}
 html{
 scroll-behavior: smooth;
 }
-.btn-md{
-padding: 14.9px 30.2px;
-border-radius: 0;
+a{
+text-decoration: none!important;
+}
+.w2b1d0407fc6ea3305f592db7b9858c29 a{
+font-size:16px;
+}
+.nav-item{
+padding-left:8.4px;
+padding-right:7.6px;
+padding-top:4.5px;
+padding-bottom:5.1px;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+.xa5333b27c7c365daa25adacac6401473 p,.xa5333b27c7c365daa25adacac6401473 a,.xa5333b27c7c365daa25adacac6401473 span,.xa5333b27c7c365daa25adacac6401473 label{
+font-size:16px!important;
 }
 </style>
 </head>
@@ -89,24 +89,24 @@ border-radius: 0;
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="navbar-nav ml-auto align-items-center d-flex"><li class="nav-item">
-<a class="nav-link bec40cd40c70c696b2632a4a68cef2aa3" href="index.html" >plumbing quotes</a>
+<ul class="ml-auto align-items-center navbar-nav d-flex"><li class="nav-item">
+<a class="nav-link t727728c934c1d023b24d17dde180899d" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="bec40cd40c70c696b2632a4a68cef2aa3 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="t727728c934c1d023b24d17dde180899d nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link bec40cd40c70c696b2632a4a68cef2aa3" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link t727728c934c1d023b24d17dde180899d" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="bec40cd40c70c696b2632a4a68cef2aa3 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="t727728c934c1d023b24d17dde180899d nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="nav-link dropdown-toggle bec40cd40c70c696b2632a4a68cef2aa3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle t727728c934c1d023b24d17dde180899d" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="bec40cd40c70c696b2632a4a68cef2aa3 nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="t727728c934c1d023b24d17dde180899d nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="pt-5 container py-4" >
+<div class="container pt-5 py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="bec40cd40c70c696b2632a4a68cef2aa3" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="bec40cd40c70c696b2632a4a68cef2aa3" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="bec40cd40c70c696b2632a4a68cef2aa3" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="bec40cd40c70c696b2632a4a68cef2aa3" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="t727728c934c1d023b24d17dde180899d" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="t727728c934c1d023b24d17dde180899d" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="t727728c934c1d023b24d17dde180899d" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="t727728c934c1d023b24d17dde180899d" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="w1ce938590ea101e384b722aa784c8fab facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest w1ce938590ea101e384b722aa784c8fab" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google w1ce938590ea101e384b722aa784c8fab-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="w1ce938590ea101e384b722aa784c8fab twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook ca134fa1e4f1c32e44f216e5c8d80e4e3" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="ca134fa1e4f1c32e44f216e5c8d80e4e3 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google ca134fa1e4f1c32e44f216e5c8d80e4e3-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter ca134fa1e4f1c32e44f216e5c8d80e4e3" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
