--- a/sitemap.html
+++ b/sitemap.html
@@ -22,64 +22,64 @@
 color: #000000!important;
 
 }
-.navbar a{
-font-size: 18.5px!important;
-font-weight: bold;
-}
-.nav-item{
-padding-left:7.5px;
-padding-right:8px;
-padding-top:4.9px;
-padding-bottom:5.4px;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.u7cedd9ea2d875625118fc9283bf4ee70{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.f587d40a400b155783509328acf4300bf a,.y118b86a5e64b9adfcc2bc1589d467e86 a{
-color:#040404!important;
-text-decoration: underline !important;
-}
-.y118b86a5e64b9adfcc2bc1589d467e86 p,.y118b86a5e64b9adfcc2bc1589d467e86 span,.y118b86a5e64b9adfcc2bc1589d467e86 label{
-font-size:16px!important;
-}
-.y118b86a5e64b9adfcc2bc1589d467e86 a{
+.yfe7a1e43d48fb8fcfd84f75d2061cede a{
 font-size:16px;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.uc417b82d73171687b5f95b02b0237184 a,.yfe7a1e43d48fb8fcfd84f75d2061cede a{
+color:#070707!important;
+text-decoration: underline !important;
 }
-a{
-text-decoration: none!important;
-}
-.f587d40a400b155783509328acf4300bf p,.f587d40a400b155783509328acf4300bf a,.f587d40a400b155783509328acf4300bf span,.f587d40a400b155783509328acf4300bf label{
+.yfe7a1e43d48fb8fcfd84f75d2061cede p,.yfe7a1e43d48fb8fcfd84f75d2061cede span,.yfe7a1e43d48fb8fcfd84f75d2061cede label{
 font-size:16px!important;
 }
 footer *{
 font-size:16px !important;
 }
-.btn-md{
-padding: 14.7px 29.5px;
-border-radius: 0;
+.uc417b82d73171687b5f95b02b0237184 p,.uc417b82d73171687b5f95b02b0237184 a,.uc417b82d73171687b5f95b02b0237184 span,.uc417b82d73171687b5f95b02b0237184 label{
+font-size:16px!important;
+}
+.navbar a{
+font-size: 17.6px!important;
+font-weight: bold;
+}
+a{
+text-decoration: none!important;
 }
 footer{
-background:#050505;
+background:#070707;
 color:#ffffff;
+}
+.nav-item{
+padding-left:8.3px;
+padding-right:7.8px;
+padding-top:4.6px;
+padding-bottom:5px;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.b65952624936f6730e9267d68ac08c5ea{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 ul{
 list-style: circle;
 }
+.w2436773389fb9989e52596b471575ee7:hover{
+box-shadow: 0 49.8px 49.6px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
 html{
 scroll-behavior: smooth;
 }
-.w89d0ac84b452fdf9f7c7814401a7acd6:hover{
-box-shadow: 0 49.6px 49.8px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.btn-md{
+padding: 14.8px 29.7px;
+border-radius: 0;
 }
 </style>
 </head>
@@ -88,24 +88,24 @@ transform: rotate(-2deg) scale(1.03);
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="align-items-center ml-auto navbar-nav d-flex"><li class="nav-item">
-<a class="z4381aa1bb387eba7fef11f50c1cd5f63 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
+<a class="nav-link x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="x27ee42ef48846ab530d9e30e83a35281 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="dropdown-toggle nav-link z4381aa1bb387eba7fef11f50c1cd5f63" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="dropdown-toggle nav-link x27ee42ef48846ab530d9e30e83a35281" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link z4381aa1bb387eba7fef11f50c1cd5f63" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="x27ee42ef48846ab530d9e30e83a35281 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ transform: rotate(-2deg) scale(1.03);
 </div>
 </section>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="z4381aa1bb387eba7fef11f50c1cd5f63" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="x27ee42ef48846ab530d9e30e83a35281" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook b6dbefa09520e9a75b83a700691681e7c" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest b6dbefa09520e9a75b83a700691681e7c" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google b6dbefa09520e9a75b83a700691681e7c-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="b6dbefa09520e9a75b83a700691681e7c twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook dc7c9238208a8e82954e7c0888b54db70" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="dc7c9238208a8e82954e7c0888b54db70 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="dc7c9238208a8e82954e7c0888b54db70 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter dc7c9238208a8e82954e7c0888b54db70" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
